# iot_core

./: CMakeLists.txt  STARTUP_THREADS.md  library.json
include/iot_core/: IIoTCoreApp.h
internal/00-public/: 01-IoTCoreApp.h
internal/01-interface/: 01-IIoTCoreApp.h
internal/02-variant/: 01-IoTCoreApp.h  02-IoTCoreApp.h
src/: iot_core.cpp
